--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,6 @@
+@import 'config';
+@import 'utilities';
+@import 'btnConfig';
 
 * {
   box-sizing: border-box;
@@ -20,32 +23,37 @@ a {
 }
 
 .hero {
-  // This is where the bulk of the SCSS styling needs to be done
 
-  // Take a look at the other files we've built already. How can they be useful here?
+  @include set-bg($primary-color);
+  a {
+    color: text-color-picker($primary-color);
+  }
 
-  // Also, take time to review the features of SCSS we've already covered:
-  // 1. $variables
-  // 2. nesting (dont forget about the ampersand (&) parent selector!)
-  // 3. At-Rules
+  a:hover {
+    color: $secondary-color;
+  }
+  nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  ul{
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+  }
+  li{
+    padding: 20px;
+  }
+  &-content{
+    height: 83vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  img{
+    width: 50%;
+  }
+
 }
 
-// This code is related to some of the aspects of SCSS we have yet to cover.
-// While you don't have to mess with it, it would be advisable to attempt to understand its functionality.
-$spaceamounts: (1,2,3,4,5);
-
-@each $space in $spaceamounts {
-  .m-#{$space} {
-    margin: #{$space}rem;
-  }
-  .my-#{$space} {
-    margin: #{$space}rem 0;
-  }
-
-  .p-#{$space} {
-    padding: #{$space}rem;
-  }
-  .py-#{$space} {
-    padding: #{$space}rem 0;
-  }
-}
